rnsc/test_data/integration/error/parser/method_directive/access_flags/super.rns
.class MethodWithSuperFlag
.super java/lang/Object

.method super main ()V
.method_end
.class_end
